--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,8 +16,8 @@
           <ion-input type="password"></ion-input>
         </ion-item>
         <ion-button color="dark" fill="clear" size="full">Forgot email/password</ion-button>
-        <ion-button color="secondary" size="full">Login</ion-button>
-        <ion-button color="secondary" fill="clear" size="full">Register</ion-button>
+        <ion-button color="secondary" size="full" (click)="login()">Login</ion-button>
+        <ion-button color="secondary" fill="clear" size="full" (click)="register()">Register</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
