--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -56,7 +56,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button color="secondary" content="fill" size="full">Register</ion-button>
+  <ion-button color="secondary" content="fill" size="full" (click)="register()">Register</ion-button>
 </ion-content>
 
 
