not much change but back to working and got rid of the things that were going wrong this is a backup to then allow myself to be safe making more mistakes lol:(

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,3 +1,5 @@
+////<head><script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script><link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" /></head>
+
 <ion-content>
   <div class="flex-center">
     <ion-card>
