no side menu, buttons at bottom instead. Everything styled mostly

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-////<head><script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script><link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" /></head>
+<head><script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script><link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" /></head>
 
 <ion-content>
   <div class="flex-center">
@@ -8,12 +8,12 @@
       </ion-card-header>
 
       <ion-card-content>
-        <ion-item>
+        <ion-item color="clear">
           <ion-label position="floating">Email</ion-label>
           <ion-input type="email"></ion-input>
         </ion-item>
-
-        <ion-item>
+        
+        <ion-item color="clear">
           <ion-label position="floating">Password</ion-label>
           <ion-input type="password"></ion-input>
         </ion-item>
