--- a/src/app/timetables/timetables.page.html
+++ b/src/app/timetables/timetables.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>timetables</ion-title>
+  <ion-toolbar color="secondary">
+    <ion-title>Timetables</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">timetables</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="timetables-page">
+  <div class="welcome-message ion-padding">
+    <h1>Welcome to Timetables</h1>
+  </div>
+
+  <ion-datetime></ion-datetime>
 </ion-content>
