--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <ion-app>
+  <!---menu component -->
+  <!--
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
@@ -13,10 +15,31 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-
-        
       </ion-content>
     </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
-</ion-app>
+    -->
+    <ion-app>
+      <ion-router-outlet id="main-content"></ion-router-outlet>
+      
+      <ion-tabs>
+        <ion-tab-bar slot="bottom">
+          <ion-tab-button tab="home">
+            <ion-icon name="home"></ion-icon>
+            <ion-label>Home</ion-label>
+          </ion-tab-button>
+          <ion-tab-button tab="courses">
+            <ion-icon name="apps"></ion-icon>
+            <ion-label>Courses</ion-label>
+          </ion-tab-button>
+          <ion-tab-button tab="timetables">
+            <ion-icon name="calendar"></ion-icon>
+            <ion-label>Timetables</ion-label>
+          </ion-tab-button>
+          <ion-tab-button tab="messageboard">
+            <ion-icon name="chatbubbles"></ion-icon>
+            <ion-label>Message Board</ion-label>
+          </ion-tab-button>
+        </ion-tab-bar>
+      </ion-tabs>
+    </ion-app>
+    
