--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,9 +1,36 @@
-ion-button[color="dark"] {
-    text-transform: initial;
-  }
-  
- // ion-content {
-    
-   // background: var(--ion-color-secondary); }
 
+
+ion-content {
+  --ion-background-color: var(--ion-color-secondary); 
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+ion-card {
+  width: 90%;
+  max-width: 400px; 
+  height: 80%; 
+  max-height: 450px; 
+  background-color: var(--ion-color-light); 
+}
+
+ion-card-content {
   
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
+  height: 100%; 
+}
+
+ion-item {
+  margin-bottom: 15px;
+}
+
+ion-button {
+  margin-top: 15px;
+}
