added crud functionality for students, added get lecturers and get modules

--- a/src/app/courses/courses.page.html
+++ b/src/app/courses/courses.page.html
@@ -12,9 +12,9 @@
       <ion-card-subtitle>Subtitle</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      Here's some content for Card 1.
+      Here's some content
     </ion-card-content>
-    <ion-button expand="block" color="primary">Save</ion-button>
+    <ion-button expand="block" color="secondary">Save</ion-button>
   </ion-card>
 
   <ion-card>
@@ -23,9 +23,9 @@
       <ion-card-subtitle>Subtitle</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      Here's some content for Card 2.
+      Here's some content
     </ion-card-content>
-    <ion-button expand="block" color="primary">Save</ion-button>
+    <ion-button expand="block" color="secondary">Save</ion-button>
   </ion-card>
 
   <ion-card>
@@ -34,9 +34,9 @@
       <ion-card-subtitle>Subtitle</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      Here's some content for Card 3.
+      Here's some content
     </ion-card-content>
-    <ion-button expand="block" color="primary">Save</ion-button>
+    <ion-button expand="block" color="secondary">Save</ion-button>
   </ion-card>
 
   <ion-card>
@@ -45,8 +45,8 @@
       <ion-card-subtitle>Subtitle</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      Here's some content for Card 4.
+      Here's some content.
     </ion-card-content>
-    <ion-button expand="block" color="primary">Save</ion-button>
+    <ion-button expand="block" color="secondary">Save</ion-button>
   </ion-card>
 </ion-content>
