--- a/src/app/pages/list-modules/list-modules.page.html
+++ b/src/app/pages/list-modules/list-modules.page.html
@@ -1,14 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title >messageboard</ion-title>
+    <ion-title>list-modules</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">messageboard</ion-title>
+      <ion-title size="large">list-modules</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-list>
+    <ion-item *ngFor='let module of modules'>
+      {{module.moduleName}}
+    </ion-item>
+  </ion-list>
 </ion-content>
- 
