--- a/src/app/pages/list-modules/list-modules.page.html
+++ b/src/app/pages/list-modules/list-modules.page.html
@@ -13,6 +13,7 @@
   <ion-list>
     <ion-item *ngFor='let module of modules'>
       {{module.moduleName}}
+      <ion-button (click)="redirectToLocationPage(module)" expand='block'>View location</ion-button>
     </ion-item>
   </ion-list>
 </ion-content>
