put info in cards and styled

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,18 +27,22 @@
             <ion-icon name="home"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-tab-button>
-          <ion-tab-button tab="courses">
+    
+          <ion-tab-button tab="list-modules">
             <ion-icon name="apps"></ion-icon>
-            <ion-label>Courses</ion-label>
+            <ion-label>Modules</ion-label>
           </ion-tab-button>
+          
           <ion-tab-button tab="timetables">
             <ion-icon name="calendar"></ion-icon>
             <ion-label>Timetables</ion-label>
           </ion-tab-button>
-          <ion-tab-button tab="messageboard">
-            <ion-icon name="chatbubbles"></ion-icon>
-            <ion-label>Message Board</ion-label>
+          
+          <ion-tab-button tab="list-students">
+            <ion-icon name="people"></ion-icon>
+            <ion-label>Students</ion-label>
           </ion-tab-button>
+          
         </ion-tab-bar>
       </ion-tabs>
     </ion-app>
