--- a/src/app/pages/add-student/add-student.page.html
+++ b/src/app/pages/add-student/add-student.page.html
@@ -1,31 +1,40 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>add-student</ion-title>
+    <ion-title>Add Student</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="" (click)="dismiss(false)"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">add-student</ion-title>
-    </ion-toolbar>
-  </ion-header><ion-header>
-    <ion-toolbar>
-      <ion-title>addstudent</ion-title>
-        <ion-buttons slot="start">
-          <ion-back-button defaultHref="" (click)="dismiss(false)"></ion-back-button>
-        </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-input type="text" [(ngModel)]="newStudent.studentID" placeholder="Student ID"></ion-input>
-    <ion-input type="text" [(ngModel)]="newStudent.firstName" placeholder="First Name"></ion-input>
-    <ion-input type="text" [(ngModel)]="newStudent.lastName" placeholder="Last Name"></ion-input>
-    <ion-input type="text" [(ngModel)]="newStudent.moduleNo1" placeholder="Module 1"></ion-input>
-    <ion-input type="text" [(ngModel)]="newStudent.moduleNo2" placeholder="Module 2"></ion-input>
-    <ion-input type="text" [(ngModel)]="newStudent.courseID" placeholder="Course ID"></ion-input>
-    <ion-button (click)="addStudent()" expand='block'>Add Student</ion-button>
-  </ion-content>
-  
-  
+  <ion-card class="ion-padding">
+    <ion-card-content>
+      <ion-item lines="none">
+        <ion-label position="floating">Student ID</ion-label>
+        <ion-input type="text" [(ngModel)]="newStudent.studentID"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label position="floating">First Name</ion-label>
+        <ion-input type="text" [(ngModel)]="newStudent.firstName"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label position="floating">Last Name</ion-label>
+        <ion-input type="text" [(ngModel)]="newStudent.lastName"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label position="floating">Module 1</ion-label>
+        <ion-input type="text" [(ngModel)]="newStudent.moduleNo1"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label position="floating">Module 2</ion-label>
+        <ion-input type="text" [(ngModel)]="newStudent.moduleNo2"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label position="floating">Course ID</ion-label>
+        <ion-input type="text" [(ngModel)]="newStudent.courseID"></ion-input>
+      </ion-item>
+      <ion-button (click)="addStudent()" expand="block" class="ion-margin-top">Add Student</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
