--- a/src/app/pages/list-modules/list-modules.page.html
+++ b/src/app/pages/list-modules/list-modules.page.html
@@ -1,19 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>list-modules</ion-title>
+    <ion-title>Module Information</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">list-modules</ion-title>
+      <ion-title size="large">List of Modules</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-list>
-    <ion-item *ngFor='let module of modules'>
-      {{module.moduleName}}
-      <ion-button (click)="redirectToLocationPage(module)" expand='block'>View location</ion-button>
-    </ion-item>
-  </ion-list>
+
+  <ion-card *ngFor="let module of modules">
+    <ion-card-header>
+      <ion-card-title>{{ module.moduleName }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p><strong>Module Number:</strong> {{ module.moduleNo }}</p>
+      <p><strong>Credits:</strong> {{ module.credits }}</p>
+      <p><strong>Website:</strong> <a href="{{ module.website }}" target="_blank">{{ module.website }}</a></p>
+      <p><strong>Start Date:</strong> {{ module.dueDate }}</p>
+      <p><strong>Location:</strong> {{ module.location }}</p>
+      <p><strong>Room:</strong> {{ module.room }}</p>
+    </ion-card-content>
+    <ion-card-content>
+      <ion-list>
+        <ion-item class="ion-text-center">
+          <ion-button (click)="redirectToLocationPage(module)" size="full" class="view-location-button">View location</ion-button>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
