--- a/src/app/pages/list-students/list-students.page.html
+++ b/src/app/pages/list-students/list-students.page.html
@@ -1,20 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>list-students</ion-title>
+    <ion-title>Students</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">list-students</ion-title>
+      <ion-title size="large">Students</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-list>
-    <ion-item *ngFor='let student of students'>
-      {{student.firstName}} {{student.lastName}}
-      <ion-button (click)="deleteStudentById(student.studentID)" expand='block'>Delete Student</ion-button>
-      <ion-button (click)="redirectToUpdatePage(student)" expand='block'>Update Student</ion-button>
-    </ion-item>
-  </ion-list>
+  
+  <ion-card *ngFor="let student of students">
+    <ion-card-header style="font-size: large;">
+      {{ student.firstName }} {{ student.lastName }}
+    </ion-card-header>
+    <ion-card-content>
+      <p>Student ID: {{ student.studentID }}</p>
+      <p>First Name: {{ student.firstName }}</p>
+      <p>Last Name: {{ student.lastName }}</p>
+      <p>Course ID: {{ student.courseID }}</p>
+     
+      <ion-button (click)="redirectToUpdatePage(student)" expand="block" class="update-button">Update</ion-button>
+      
+      <ion-button (click)="deleteStudentById(student.studentID)" expand="block" color="danger" class="delete-button">Delete</ion-button>
+    
+    </ion-card-content>
+  </ion-card>
 </ion-content>
