--- a/src/app/pages/update-student/update-student.page.html
+++ b/src/app/pages/update-student/update-student.page.html
@@ -1,31 +1,47 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>update-student</ion-title>
+    <ion-title>Update Student</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/list-students"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">add-student</ion-title>
-    </ion-toolbar>
-  </ion-header><ion-header>
-    <ion-toolbar>
-      <ion-title>Update student</ion-title>
-        <ion-buttons slot="start">
-          <ion-back-button defaultHref="" (click)="dismiss(false)"></ion-back-button>
-        </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content *ngIf="student">
-    <ion-input type="text" [(ngModel)]="student.studentID" placeholder="Student ID"></ion-input>
-    <ion-input type="text" [(ngModel)]="student.firstName" placeholder="First Name"></ion-input>
-    <ion-input type="text" [(ngModel)]="student.lastName" placeholder="Last Name"></ion-input>
-    <ion-input type="text" [(ngModel)]="student.moduleNo1" placeholder="Module 1"></ion-input>
-    <ion-input type="text" [(ngModel)]="student.moduleNo2" placeholder="Module 2"></ion-input>
-    <ion-input type="text" [(ngModel)]="student.courseID" placeholder="Course ID"></ion-input>
-    <ion-button (click)="updateStudent(student)" expand='block'>Update Student</ion-button>
-  </ion-content>
-  
-  
+  <ion-card class="custom-card">
+    <ion-card-content *ngIf="student">
+      <div class="heading">
+        <h2>Student Information</h2>
+      </div>
+
+      <div class="data">
+        <ion-item>
+          <ion-label>Student ID</ion-label>
+          <ion-input type="text" [(ngModel)]="student.studentID" placeholder="Student ID"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>First Name</ion-label>
+          <ion-input type="text" [(ngModel)]="student.firstName" placeholder="First Name"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Last Name</ion-label>
+          <ion-input type="text" [(ngModel)]="student.lastName" placeholder="Last Name"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Module 1</ion-label>
+          <ion-input type="text" [(ngModel)]="student.moduleNo1" placeholder="Module 1"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Module 2</ion-label>
+          <ion-input type="text" [(ngModel)]="student.moduleNo2" placeholder="Module 2"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Course ID</ion-label>
+          <ion-input type="text" [(ngModel)]="student.courseID" placeholder="Course ID"></ion-input>
+        </ion-item>
+      </div>
+
+      <ion-button (click)="updateStudent(student)" expand='block' class="update-button">Update</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
